--- a/assets/css/nikola_ipython_bkup.css
+++ b/assets/css/nikola_ipython_bkup.css
@@ -12,7 +12,7 @@ pre {
 div.prompt {
   padding: 0.6em;
   font-size: 13px;
-  background-color: #FFFFFF;
+  background-color: #E9E9E9;
   margin-right: 1em;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
